# ML-Projects

./: .gitignore  README.md  pyproject.toml
Email Spam Classifier/: app.py  project.ipynb  vectorizer.pkl
Movie Recommender System/: app.py  project.ipynb
WhatsApp Chat Analysis/: app.py  helper.py  preprocessor.py  project.ipynb
